--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -5,8 +5,8 @@ flex-direction: column;
 flex-wrap: wrap;
 
 border: 1px solid black;
-height: 90vh;
-padding: 10%;
+min-height: 100vh;
+padding: 5%;
 margin: 10%;
 
 
