--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -1,13 +1,14 @@
 
-.CardList {
+.cardList_Container {
 display: flex;
 flex-direction: column;
 flex-wrap: wrap;
+gap: 20px;
 
 border: 1px solid black;
 min-height: 100vh;
 padding: 5%;
-margin: 10%;
+margin: 3%;
 
 
 }
