--- a/src/App.scss
+++ b/src/App.scss
@@ -8,3 +8,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 400px) {
+  .appCon {
+    flex-direction: column;
+  }
+}
