--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,14 @@
-.appCon {
-  text-align: center;
-  display: flex;
-}
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
-@media screen and (max-width: 400px) {
-  .appCon {
-    flex-direction: column;
-  }
+.appCon {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 1024px) {
+  // .appCon {
+  // }
 }
